# rust-web-example

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
src/: main.rs
src/data/: mod.rs
src/handlers/: mod.rs
src/logging/: mod.rs
