[package]
name = "analyzer"
version = "0.1.0"
authors = ["mario zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
actix-web = "0.7.19"
reqwest = "0.9.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.4.1"
slog-async = "2.3.0"
slog-term = "2.4.0"
futures = "0.1"
failure = "0.1.3"
envconfig = "0.5.0"
envconfig_derive = "0.5.0"
